// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button fixbug renders {0} , 0 and {false} 1`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  0
</button>
`;

exports[`Button fixbug renders {0} , 0 and {false} 2`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span>
    0
  </span>
</button>
`;

exports[`Button fixbug renders {0} , 0 and {false} 3`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
/>
`;

exports[`Button renders Chinese characters correctly 1`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span>
    按 钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 2`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span
    aria-label="search"
    class="anticon anticon-search"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="search"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
      />
    </svg>
  </span>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 3`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span
    aria-label="search"
    class="anticon anticon-search"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="search"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
      />
    </svg>
  </span>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 4`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span
    aria-label="search"
    class="anticon anticon-search"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="search"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
      />
    </svg>
  </span>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 5`] = `
<button
  class="ant-btn ant-btn-default osui-button osui-button-loading osui-button-disabled osui-button-flex-center"
  disabled=""
  type="button"
>
  <svg
    class="osui-icon osui-button-icon-spinner osui-button-keep-children osui-icon-spin"
    focusable="false"
    height="1024"
    viewBox="0 0 1024 1024"
    width="1024"
  >
    <path
      d="M521.496 64.099L512 64C264.576 64 64 264.576 64 512c0 20.504 16.622 37.125 37.125 37.125 20.504 0 37.126-16.621 37.126-37.125 0-206.416 167.333-373.75 373.749-373.75l20.502.55C730.114 149.382 885.749 313.245 885.749 512c0 206.416-167.333 373.75-373.749 373.75-20.504 0-37.125 16.62-37.125 37.125C474.875 943.378 491.496 960 512 960c247.424 0 448-200.576 448-448 0-243.771-194.977-442.83-438.504-447.901z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 6`] = `
<button
  class="ant-btn ant-btn-default osui-button osui-button-loading osui-button-disabled osui-button-flex-center"
  disabled=""
  type="button"
>
  <svg
    class="osui-icon osui-button-icon-spinner osui-icon-spin"
    focusable="false"
    height="1024"
    viewBox="0 0 1024 1024"
    width="1024"
  >
    <path
      d="M521.496 64.099L512 64C264.576 64 64 264.576 64 512c0 20.504 16.622 37.125 37.125 37.125 20.504 0 37.126-16.621 37.126-37.125 0-206.416 167.333-373.75 373.749-373.75l20.502.55C730.114 149.382 885.749 313.245 885.749 512c0 206.416-167.333 373.75-373.749 373.75-20.504 0-37.125 16.62-37.125 37.125C474.875 943.378 491.496 960 512 960c247.424 0 448-200.576 448-448 0-243.771-194.977-442.83-438.504-447.901z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <span>
    按钮
  </span>
</button>
`;

exports[`Button renders Chinese characters correctly 7`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span>
    按 钮
  </span>
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span>
    Follow
  </span>
</button>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 1`] = `
<button
  class="ant-btn ant-btn-default ant-btn-rtl osui-button"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 2`] = `
<button
  class="ant-btn ant-btn-default ant-btn-lg ant-btn-rtl osui-button"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 3`] = `
<button
  class="ant-btn ant-btn-default ant-btn-sm ant-btn-rtl osui-button"
  type="button"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 4`] = `
<div
  class="ant-btn-group ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 5`] = `
<div
  class="ant-btn-group ant-btn-group-lg ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 6`] = `
<div
  class="ant-btn-group ant-btn-group-sm ant-btn-group-rtl"
/>
`;

exports[`Button rtl render component should be rendered correctly in RTL direction 7`] = `
<div
  class="ant-btn-group ant-btn-group-rtl"
/>
`;

exports[`Button should change loading state instantly by default 1`] = `
<button
  class="ant-btn ant-btn-default osui-button osui-button-loading osui-button-disabled osui-button-flex-center"
  disabled=""
  type="button"
>
  <svg
    class="osui-icon osui-button-icon-spinner osui-icon-spin"
    focusable="false"
    height="1024"
    viewBox="0 0 1024 1024"
    width="1024"
  >
    <path
      d="M521.496 64.099L512 64C264.576 64 64 264.576 64 512c0 20.504 16.622 37.125 37.125 37.125 20.504 0 37.126-16.621 37.126-37.125 0-206.416 167.333-373.75 373.749-373.75l20.502.55C730.114 149.382 885.749 313.245 885.749 512c0 206.416-167.333 373.75-373.749 373.75-20.504 0-37.125 16.62-37.125 37.125C474.875 943.378 491.496 960 512 960c247.424 0 448-200.576 448-448 0-243.771-194.977-442.83-438.504-447.901z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <span>
    Button
  </span>
</button>
`;

exports[`Button should handle fragment as children 1`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span>
    text
  </span>
</button>
`;

exports[`Button should merge text if children using variable 1`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
>
  <span>
    This is a test 1
  </span>
</button>
`;

exports[`Button should not render as link button when href is undefined 1`] = `
<button
  class="ant-btn ant-btn-primary osui-button"
  type="button"
>
  <span>
    button
  </span>
</button>
`;

exports[`Button should render empty button without errors 1`] = `
<button
  class="ant-btn ant-btn-default osui-button"
  type="button"
/>
`;

exports[`Button should support link button 1`] = `
<a
  class="ant-btn ant-btn-default osui-button"
  href="https://ant.design"
  target="_blank"
>
  <span>
    link button
  </span>
</a>
`;

exports[`Button should support to change loading 1`] = `
<button
  class="ant-btn ant-btn-default osui-button osui-button-loading osui-button-disabled osui-button-flex-center"
  disabled=""
  type="button"
>
  <svg
    class="osui-icon osui-button-icon-spinner osui-icon-spin"
    focusable="false"
    height="1024"
    viewBox="0 0 1024 1024"
    width="1024"
  >
    <path
      d="M521.496 64.099L512 64C264.576 64 64 264.576 64 512c0 20.504 16.622 37.125 37.125 37.125 20.504 0 37.126-16.621 37.126-37.125 0-206.416 167.333-373.75 373.749-373.75l20.502.55C730.114 149.382 885.749 313.245 885.749 512c0 206.416-167.333 373.75-373.749 373.75-20.504 0-37.125 16.62-37.125 37.125C474.875 943.378 491.496 960 512 960c247.424 0 448-200.576 448-448 0-243.771-194.977-442.83-438.504-447.901z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <span>
    Button
  </span>
</button>
`;
